<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="@bool/keep_screen_on_default"
    android:layout_below="@id/toolbar">

    <Button
        android:id="@+id/button_export"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/data_export"
        android:textAlignment="center" />

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#F8F5F3"
        android:textAlignment="center"
        android:text="@string/iperf_time"/>

    <EditText android:id="@+id/iperf_sec"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dip"
        android:layout_marginBottom="0dip"
        android:singleLine="true"
        />
    <Button
        android:id="@+id/iperf"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/iperf"
        android:textAlignment="center" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/logout"
        android:textAlignment="center" />

</LinearLayout>