<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/main_login_activity"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">
<!--    <EditText-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:ems="10"-->
<!--        android:id="@+id/username"-->
<!--        android:hint="@string/login_text" />-->

<!--    <EditText-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:inputType="textPassword"-->
<!--        android:ems="10"-->
<!--        android:id="@+id/password"-->
<!--        android:hint="@string/password_text" />-->

<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/auth_text"-->
<!--        android:id="@+id/button"-->
<!--       />-->

    <TextView android:id="@+id/link_to_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="40dip"
        android:text="@string/link"
        android:gravity="center"

        android:textColor="#0b84aa"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/error"
        android:textColor="#ffff0000" />

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#F8F5F3"
        android:textAlignment="center"
        android:text="@string/login_text"/>
    <EditText android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="20dip"
        android:singleLine="true"
      />

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#F7F5F3"
        android:textAlignment="center"
        android:text="@string/password_text"/>
    <EditText  android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:singleLine="true"
        android:password="true"
        />

    <Button  android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/auth_text"
        android:onClick="tryLogin"/>

</LinearLayout>